--- a/composer.json
+++ b/composer.json
@@ -27,10 +27,10 @@
         "laravel/framework": "5.4.*"
     },
     "require-dev": {
-        "phpunit/phpunit": "^6.0",
-        "squizlabs/php_codesniffer": "3.*",
         "orchestra/testbench": "^3.4",
-        "orchestra/database": "^3.4"
+        "orchestra/database": "^3.4",
+        "phpunit/phpunit": "^6.0",
+        "squizlabs/php_codesniffer": "3.*"
     },
     "autoload": {
         "psr-4": {
