--- a/composer.json
+++ b/composer.json
@@ -24,7 +24,8 @@
     ],
     "require": {
         "php": ">=7.0",
-        "laravel/framework": "5.4.*"
+        "laravel/framework": "5.4.*",
+        "xety/configurator": "^1.0"
     },
     "require-dev": {
         "orchestra/testbench": "^3.4",
