--- a/composer.json
+++ b/composer.json
@@ -23,14 +23,14 @@
         }
     ],
     "require": {
-        "php": ">=7.0",
-        "laravel/framework": "5.4.*",
+        "php": "^7.1.3",
+        "laravel/framework": "5.6.*",
         "xety/configurator": "^1.0"
     },
     "require-dev": {
         "orchestra/testbench": "^3.4",
         "orchestra/database": "^3.4",
-        "phpunit/phpunit": "^6.0",
+        "phpunit/phpunit": "^7.0",
         "squizlabs/php_codesniffer": "3.*"
     },
     "autoload": {
