Enable Auto-Discovery for Laravel 5.5+

--- a/composer.json
+++ b/composer.json
@@ -43,6 +43,13 @@
             "Tests\\": "tests/"
         }
     },
+    "extra": {
+        "laravel": {
+            "providers": [
+                "Xetaio\\Mentions\\Providers\\MentionServiceProvider"
+            ]
+        }
+    },
     "minimum-stability": "dev",
     "prefer-stable": true
 }
