--- a/composer.json
+++ b/composer.json
@@ -24,7 +24,7 @@
     ],
     "require": {
         "php": "^7.1.3",
-        "laravel/framework": "5.6.*",
+        "laravel/framework": "^5.*",
         "xety/configurator": "^1.0"
     },
     "require-dev": {
