--- a/composer.json
+++ b/composer.json
@@ -23,15 +23,15 @@
         }
     ],
     "require": {
-        "php": "^7.1.3",
-        "laravel/framework": "^5.0",
+        "php": "^7.2.5",
+        "laravel/framework": "^7.0",
         "xety/configurator": "^1.0"
     },
     "require-dev": {
-        "orchestra/testbench": "^3.6",
-        "orchestra/database": "^3.6",
-        "phpunit/phpunit": "^7.0",
-        "squizlabs/php_codesniffer": "3.*"
+        "orchestra/testbench": "^5.0",
+        "orchestra/database": "^5.0",
+        "phpunit/phpunit": "^8.5",
+        "squizlabs/php_codesniffer": "^3.0"
     },
     "autoload": {
         "psr-4": {
