--- a/composer.json
+++ b/composer.json
@@ -23,7 +23,7 @@
         }
     ],
     "require": {
-        "php": "^7.2.5",
+        "php": ">=7.2.5",
         "illuminate/support": "^7.0",
         "illuminate/database": "^7.0",
         "xety/configurator": "^1.0"
