--- a/composer.json
+++ b/composer.json
@@ -23,13 +23,13 @@
         }
     ],
     "require": {
-        "php": "^8.0",
-        "illuminate/support": "^9.0",
-        "illuminate/database": "^9.0",
+        "php": "^7.3|^8.0",
+        "illuminate/support": "^8.0",
+        "illuminate/database": "^8.0",
         "xety/configurator": "^1.0"
     },
     "require-dev": {
-        "orchestra/testbench": "^7.0",
+        "orchestra/testbench": "^6.0",
         "phpunit/phpunit": "^9.5",
         "squizlabs/php_codesniffer": "^3.0"
     },
