--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -32,5 +32,10 @@ jobs:
     # Add a test script to composer.json, for instance: "test": "vendor/bin/phpunit"
     # Docs: https://getcomposer.org/doc/articles/scripts.md
 
+    - name: Create Database
+      run: |
+        mkdir -p database
+        touch /vendor/temp/database.sqlite
+
     - name: Run tests
       run: vendor/bin/phpunit
