--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -35,7 +35,7 @@ jobs:
     - name: Create Database
       run: |
         mkdir -p database
-        touch /vendor/temp/database.sqlite
+        touch tests/vendor/temp/database.sqlite
 
     - name: Run tests
       run: vendor/bin/phpunit
