--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -35,10 +35,10 @@ jobs:
     - name: Directory Permissions
       run: chmod -R 775 tests/vendor/temp
 
-    #- name: Create Database
-    #  run: |
-    #    mkdir -p database
-    #   touch tests/vendor/temp/database.sqlite
+    - name: Create Database
+      run: |
+        mkdir -p database
+       touch tests/vendor/temp/database.sqlite
 
     - name: Directory Permissions
       run: chmod 775 tests/vendor/temp/database.sqlite
