--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -32,14 +32,13 @@ jobs:
     # Add a test script to composer.json, for instance: "test": "vendor/bin/phpunit"
     # Docs: https://getcomposer.org/doc/articles/scripts.md
 
-    - name: Directory Permissions
-      run: chmod -R 775 tests/vendor/temp
+    #- name: Directory Permissions
+    #  run: chmod -R 775 tests/vendor/temp
 
     - name: Create Database
-      run: touch tests/vendor/temp/database.sqlite
-
-    - name: Directory Permissions
-      run: chmod 775 tests/vendor/temp/database.sqlite
+      run: |
+        touch tests/vendor/temp/database.sqlite
+        chmod 775 tests/vendor/temp/database.sqlite
 
     - name: Run tests
       run: vendor/bin/phpunit
