--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -29,16 +29,15 @@ jobs:
     - name: Install dependencies
       run: composer install --prefer-dist --no-progress
 
-    # Add a test script to composer.json, for instance: "test": "vendor/bin/phpunit"
-    # Docs: https://getcomposer.org/doc/articles/scripts.md
-
-    #- name: Directory Permissions
-    #  run: chmod -R 775 tests/vendor/temp
-
     - name: Create Database
       run: |
         touch tests/vendor/temp/database.sqlite
         chmod 775 tests/vendor/temp/database.sqlite
 
     - name: Run tests
-      run: vendor/bin/phpunit
+      run: vendor/bin/phpunit --coverage-clover tests/vendor/temp/coverage.xml
+
+    - name: Upload coverage to Codecov
+      uses: codecov/codecov-action@v2
+      with:
+        files: tests/vendor/temp/coverage.xml
