--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -2,42 +2,39 @@ name: Unit Tests
 
 on:
   push:
-    branches: [ master ]
   pull_request:
-    branches: [ master ]
 
 jobs:
-  build:
-
-    runs-on: ubuntu-latest
+  PHPUnit:
+    strategy:
+      matrix:
+        php:
+          - 8.1
+          - 8.0
+          - 7.4
+          - 7.3
 
     steps:
-    - uses: actions/checkout@v2
+      - uses: actions/checkout@v2
+      - name: Setup PHP
+        uses: shivammathur/setup-php@develop
+        with:
+          php-version: ${{ matrix.php }}
 
-    - name: Validate composer.json
-      run: composer validate --strict
+      - run: php -v
 
-    - name: Cache Composer packages
-      id: composer-cache
-      uses: actions/cache@v2
-      with:
-        path: vendor
-        key: ${{ runner.os }}-php-${{ hashFiles('**/composer.lock') }}
-        restore-keys: |
-          ${{ runner.os }}-php-
+      - name: Install dependencies
+        run: composer install --prefer-dist --no-progress
 
-    - name: Install dependencies
-      run: composer install --prefer-dist --no-progress
+      - name: Create Database
+        run: |
+          touch tests/vendor/temp/database.sqlite
+          chmod 775 tests/vendor/temp/database.sqlite
 
-    - name: Create Database
-      run: |
-        touch tests/vendor/temp/database.sqlite
-        chmod 775 tests/vendor/temp/database.sqlite
+      - name: Run tests
+        run: vendor/bin/phpunit --coverage-clover tests/vendor/temp/coverage.xml
 
-    - name: Run tests
-      run: vendor/bin/phpunit --coverage-clover tests/vendor/temp/coverage.xml
-
-    - name: Upload coverage to Codecov
-      uses: codecov/codecov-action@v2
-      with:
-        files: tests/vendor/temp/coverage.xml
+      - name: Upload coverage to Codecov
+        uses: codecov/codecov-action@v2
+        with:
+          files: tests/vendor/temp/coverage.xml
