--- a/composer.json
+++ b/composer.json
@@ -18,20 +18,20 @@
     "authors": [
         {
             "name": "Xety",
-            "email": "emeric@xeta.io",
+            "email": "zoro.fmt@gmail.com",
             "homepage": "https://github.com/Xety"
         }
     ],
     "require": {
-        "php": "^7.3|^8.0",
-        "illuminate/support": "^8.0",
-        "illuminate/database": "^8.0",
+        "php": ">=7.3",
+        "illuminate/support": "^8.0 || ^9.0",
+        "illuminate/database": "^8.0 || ^9.0",
         "xety/configurator": "^1.0"
     },
     "require-dev": {
-        "orchestra/testbench": "^6.0",
+        "orchestra/testbench": "^6.0 || ^7.0",
         "phpunit/phpunit": "^9.5",
-        "squizlabs/php_codesniffer": "^3.0"
+        "squizlabs/php_codesniffer": "^3.2"
     },
     "autoload": {
         "psr-4": {
