--- a/composer.json
+++ b/composer.json
@@ -24,13 +24,13 @@
     ],
     "require": {
         "php": ">=7.3",
-        "illuminate/support": "^8.0 || ^9.0",
-        "illuminate/database": "^8.0 || ^9.0",
+        "illuminate/support": "^8.0 || ^9.0 || ^10.0",
+        "illuminate/database": "^8.0 || ^9.0 || ^10.0",
         "xety/configurator": "^1.0"
     },
     "require-dev": {
-        "orchestra/testbench": "^6.0 || ^7.0",
-        "phpunit/phpunit": "^9.5",
+        "orchestra/testbench": "^6.0 || ^7.0 || ^8.0",
+        "phpunit/phpunit": "^9.5 || ^10.0",
         "squizlabs/php_codesniffer": "^3.2"
     },
     "autoload": {
