--- a/composer.json
+++ b/composer.json
@@ -23,13 +23,13 @@
         }
     ],
     "require": {
-        "php": ">=7.3",
-        "illuminate/support": "^8.0 || ^9.0",
-        "illuminate/database": "^8.0 || ^9.0",
+        "php": ">=8.1",
+        "illuminate/support": "^10.0",
+        "illuminate/database": "^10.0",
         "xety/configurator": "^1.0"
     },
     "require-dev": {
-        "orchestra/testbench": "^6.0 || ^7.0",
+        "orchestra/testbench": "^8.0",
         "phpunit/phpunit": "^9.5",
         "squizlabs/php_codesniffer": "^3.2"
     },
