--- a/composer.json
+++ b/composer.json
@@ -24,13 +24,13 @@
     ],
     "require": {
         "php": ">=8.1",
-        "illuminate/support": "^10.0",
-        "illuminate/database": "^10.0",
+        "illuminate/support": "^10.0|^11.0",
+        "illuminate/database": "^10.0|^11.0",
         "xety/configurator": "^1.0"
     },
     "require-dev": {
-        "orchestra/testbench": "^8.0",
-        "phpunit/phpunit": "^9.5",
+        "orchestra/testbench": "^8.0|^9.0",
+        "phpunit/phpunit": "^9.5|^10.5",
         "squizlabs/php_codesniffer": "^3.2"
     },
     "autoload": {
