--- a/composer.json
+++ b/composer.json
@@ -3,7 +3,7 @@
     "description": "A package to parse a @mention from a text and mention the user with a notification.",
     "keywords": [
         "laravel",
-        "laravel-5-package",
+        "laravel-12-package",
         "mentions",
         "users",
         "notifications"
@@ -23,15 +23,14 @@
         }
     ],
     "require": {
-        "php": ">=8.1",
-        "illuminate/support": "^10.0|^11.0",
-        "illuminate/database": "^10.0|^11.0",
+        "php": "^8.2",
+        "illuminate/support": "^12.0",
+        "illuminate/database": "^12.0",
         "xety/configurator": "^1.0"
     },
     "require-dev": {
-        "orchestra/testbench": "^8.0|^9.0",
-        "phpunit/phpunit": "^9.5|^10.5",
-        "squizlabs/php_codesniffer": "^3.2"
+        "orchestra/testbench": "^10.0",
+        "phpunit/phpunit": "^11.5.3"
     },
     "autoload": {
         "psr-4": {
